componentes compartidos agregados2

--- a/src/app/pages/executive-processes/approval-destination/approval-destination-list/approval-destination-list.component.html
+++ b/src/app/pages/executive-processes/approval-destination/approval-destination-list/approval-destination-list.component.html
@@ -4,49 +4,7 @@
     
 <nb-card-body>
 
-      <div class="row">
-
-        <div class="col-md-4">
-          <div class="form-group">
-            <label for="" class="label">No. Expediente</label>
-            <input type="text" nbInput fullWidth id="" placeholder="">
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="form-group">
-            <label for="" class="label">Averig Previa</label>
-            <input type="text" nbInput fullWidth id="" placeholder="">
-          </div>
-        </div>
-
-        <div class="col-md-4">
-          <div class="form-group">
-            <label for="" class="label">Causa Penal</label>
-            <input type="text" nbInput fullWidth id="" placeholder="">
-          </div>
-        </div>
-
-      </div>
-
-      <div class="row">
-
-        <div class="col-md-4">
-          <div class="form-group">
-            <label for="" class="label">Acta Circuns</label>
-            <input type="" nbInput fullWidth id="" placeholder="">
-          </div>
-        </div>
-
-        <div class="col-sm-4">
-          <div class="form-group">
-            <label for="" class="label">Toca Penal</label>
-            <input type="text" nbInput fullWidth id="" placeholder="">
-          </div>
-        </div>
-
-                
-      </div>
+  <ngx-file-number-shared></ngx-file-number-shared>
 
 </nb-card-body>
 
