--- a/src/app/pages/executive-processes/re-docs-x-sera/re-docs-x-sera-list/re-docs-x-sera-list.component.html
+++ b/src/app/pages/executive-processes/re-docs-x-sera/re-docs-x-sera-list/re-docs-x-sera-list.component.html
@@ -1,4 +1,4 @@
-<nb-card class="cat-card">   
+<nb-card class="cat-card"> 
     <nb-card-header>
   
         <span class="title">
@@ -48,39 +48,7 @@
               
       </div>
 
-      <div class="row">
-  
-        <div class="col-md-1">
-            <div class="form-group">
-                <label class="label">Área Destino</label>
-                <input  nbInput fullWidth  placeholder="">
-            </div>
-        </div>
-        
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label class="label">Seleccione Área</label>
-                    <input  nbInput fullWidth  placeholder="">
-                </div>
-            </div>
-
-    </div>
-
-    <div class="row">
-  
-        <div class="col-md-1">
-            <div class="form-group">
-                <input  nbInput fullWidth  placeholder="">
-            </div>
-        </div>
-        
-            <div class="col-md-3">
-                <div class="form-group">
-                    <input  nbInput fullWidth  placeholder="">
-                </div>
-            </div>
-
-    </div>
+      <ngx-destination-area-shared></ngx-destination-area-shared>
   
     <div class="form-group">
         <div class="d-flex justify-content-center">
