--- a/src/app/pages/executive-processes/sim-doc-recep-int/sim-doc-recep-int-list/sim-doc-recep-int-list.component.html
+++ b/src/app/pages/executive-processes/sim-doc-recep-int/sim-doc-recep-int-list/sim-doc-recep-int-list.component.html
@@ -1,1 +1,20 @@
-<p>sim-doc-recep-int-list works!</p>
+<nb-card class="cat-card"> 
+
+    <nb-card-header>
+  
+        <span class="title">
+            PRUEBA DE COORDINACIÓNES REGIONALES
+        </span>
+  
+    </nb-card-header>
+  
+    <nb-card-body>
+
+        <ngx-state-coordination-shared></ngx-state-coordination-shared>
+
+    </nb-card-body>
+
+
+
+  
+  </nb-card>
