componentes compartidos agregados

--- a/src/app/pages/executive-processes/assets-rec-admin/assets-rec-admin-list/assets-rec-admin-list.component.html
+++ b/src/app/pages/executive-processes/assets-rec-admin/assets-rec-admin-list/assets-rec-admin-list.component.html
@@ -53,6 +53,13 @@
                         <input nbInput fullWidth  placeholder="">
                     </div>
                 </div>
+
+                <div class="col-md-3">
+                    <div class="form-group">
+                        <label class="label">&nbsp;</label>
+                        <input nbInput fullWidth  placeholder="">
+                    </div>
+                </div>
                 
                 <!--
                     <div class="col-md-3">
