--- a/src/app/pages/executive-processes/destruction-auth-management/destruction-auth-management-list/destruction-auth-management-list.component.html
+++ b/src/app/pages/executive-processes/destruction-auth-management/destruction-auth-management-list/destruction-auth-management-list.component.html
@@ -1,1 +1,98 @@
-<p>destruction-auth-management-list works!</p>
+<nb-card>
+
+  <nb-card-header>Pruebas</nb-card-header>
+
+    <nb-card-body>
+
+      
+
+      <div class="form-group row">
+        <label class="label col-sm-1 col-form-label">No.</label>
+        <div class="col-sm-3">
+          <input nbInput fullWidth placeholder="">
+        </div>
+
+        <label class="label col-sm-1 col-form-label">Oficio de solicitud</label>
+        <div class="col-sm-3">
+          <input nbInput fullWidth placeholder="">
+        </div>
+
+        <label class="label col-sm-1 col-form-label">Oficio de alcance</label>
+        <div class="col-sm-3">
+          <input nbInput fullWidth placeholder="">
+        </div>
+    </div>
+
+    <div class="form-group row">
+      <label class="label col-sm-1 col-form-label">Fecha de recepción</label>
+      <div class="col-sm-3">
+        <input nbInput fullWidth placeholder="">
+      </div>
+
+      <label class="label col-sm-1 col-form-label">Fecha de alcance</label>
+      <div class="col-sm-3">
+        <input nbInput fullWidth placeholder="">
+      </div>
+
+      <label class="label col-sm-1 col-form-label">Fecha de integración</label>
+      <div class="col-sm-3">
+        <input nbInput fullWidth placeholder="">
+      </div>
+  </div>
+
+    </nb-card-body>
+
+</nb-card>
+  
+
+<!-- <div class="row">
+
+        <div class="col-md-4">
+          <div class="form-group">
+            <label for="" class="label">No.</label>
+            <input type="text" nbInput fullWidth id="" placeholder="">
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="form-group">
+            <label for="" class="label">Oficio de solicitud</label>
+            <input type="text" nbInput fullWidth id="" placeholder="">
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="form-group">
+            <label for="" class="label">Oficio de alcance</label>
+            <input type="text" nbInput fullWidth id="" placeholder="">
+          </div>
+        </div>
+
+        
+      </div> -->
+
+      <!-- <div class="row">
+
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="" class="label">Fecha de recepción</label>
+            <input type="text" nbInput fullWidth id="" placeholder="">
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="" class="label">Fecha de recepción</label>
+            <input type="text" nbInput fullWidth id="" placeholder="">
+          </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="form-group">
+            <label for="" class="label">Fecha de recepción</label>
+            <input type="text" nbInput fullWidth id="" placeholder="">
+          </div>
+        </div>
+
+
+      </div> -->
