--- a/src/app/pages/executive-processes/doc-re-des-area/doc-re-des-area-list/doc-re-des-area-list.component.html
+++ b/src/app/pages/executive-processes/doc-re-des-area/doc-re-des-area-list/doc-re-des-area-list.component.html
@@ -40,24 +40,7 @@
                     
             </div>
         
-            <div class="row">
-          
-                <div class="col-md-1">
-                    <div class="form-group">
-                        <label class="label">Área Destino</label>
-                        <input nbInput fullWidth  placeholder="">
-                    </div>
-                </div>
-                
-                    <div class="col-md-3">
-                        <div class="form-group">
-                            <label class="label">Selecciona Área:</label>
-                            <input nbInput fullWidth  placeholder="">
-                        </div>
-                    </div>
-        
-            </div>
-        
+            <ngx-destination-area-shared></ngx-destination-area-shared>
         
             <ngx-deleg-subdeleg-shared [form]="formDelegation"></ngx-deleg-subdeleg-shared>
           
