--- a/src/app/pages/executive-processes/q-accumulated-goods/q-accumulated-goods-list/q-accumulated-goods-list.component.html
+++ b/src/app/pages/executive-processes/q-accumulated-goods/q-accumulated-goods-list/q-accumulated-goods-list.component.html
@@ -31,7 +31,7 @@
     
             <div class="col-md-2">
                 <div class="form-group">
-                    <label class="label">Al</label>
+                    <label class="label">Al&nbsp;</label>
                     <input formControlName="fechaFinal" nbInput
                                placeholder="Selección de fecha"
                                [nbDatepicker]="formpicker2">
