--- a/src/app/pages/executive-processes/sim-doc-recep-int/sim-doc-recep-int-list/sim-doc-recep-int-list.component.html
+++ b/src/app/pages/executive-processes/sim-doc-recep-int/sim-doc-recep-int-list/sim-doc-recep-int-list.component.html
@@ -12,8 +12,14 @@
 
         <ngx-state-coordination-shared></ngx-state-coordination-shared>
 
-    </nb-card-body>
+        <!-- <ngx-types-shared></ngx-types-shared> -->
 
+        <!-- <ngx-no-volante-shared></ngx-no-volante-shared> -->
+
+        <!-- <ngx-request-proficient-shared></ngx-request-proficient-shared> -->
+
+
+    </nb-card-body>
 
 
   
