--- a/src/app/pages/executive-processes/total-doc-received/total-doc-received-list/total-doc-received-list.component.html
+++ b/src/app/pages/executive-processes/total-doc-received/total-doc-received-list/total-doc-received-list.component.html
@@ -33,7 +33,7 @@
 
         <div class="col-md-2">
             <div class="form-group">
-                <label class="label">Al</label>
+                <label class="label">Al&nbsp;</label>
                 
                   <input nbInput
                          placeholder="Selección de fecha"
