--- a/src/app/pages/executive-processes/doc-re-des-area/doc-re-des-area-list/doc-re-des-area-list.component.html
+++ b/src/app/pages/executive-processes/doc-re-des-area/doc-re-des-area-list/doc-re-des-area-list.component.html
@@ -2,37 +2,37 @@
     <nb-card-header>
   
         <span class="title">
-            TOTAL DE DOCUMENTOS RECIBIDOS VS ÁREA DESTINO
+            TOTAL DE DOCUMENTOS RECIBIDOS VS ÁREA DESTINO 
         </span>
 
     </nb-card-header>
   
     <nb-card-body>
   
-        <form [formGroup]="formDelegation" (submit)="mostrarInfo()">
+        <form [formGroup]="form" (submit)="mostrarInfo()">
 
             <div class="row">
   
                 <div class="col-md-2">
                     <div class="form-group">
                         <label class="label">Fecha recepción del:</label>
-                        
-                          <input nbInput
+                          <input nbInput formControlName="fechaInicial"
                                  placeholder="Selección de fecha"
                                  [nbDatepicker]="formpicker">
                           <nb-datepicker #formpicker></nb-datepicker>
+                          <ngx-validation-message label="fechaInicial" [showRequired]="fechaInicial?.errors?.required && fechaInicial.touched"></ngx-validation-message>
                         
                     </div>
                 </div>
         
                 <div class="col-md-2">
                     <div class="form-group">
-                        <label class="label">Al</label>
-                        
-                          <input nbInput
+                        <label class="label">Al</label>          
+                          <input nbInput formControlName="fechaFinal"
                                  placeholder="Selección de fecha"
                                  [nbDatepicker]="formpicker2">
                           <nb-datepicker #formpicker2></nb-datepicker>
+                          <ngx-validation-message label="fechaFinal" [showRequired]="fechaFinal?.errors?.required && fechaFinal.touched"></ngx-validation-message>
                         
                     </div>
                 </div>
@@ -40,9 +40,13 @@
                     
             </div>
         
-            <ngx-destination-area-shared></ngx-destination-area-shared>
+            <ngx-destination-area-shared [form]="form"></ngx-destination-area-shared>
+      <ngx-validation-message label="noAreaDestino" [showRequired]="noAreaDestino?.errors?.required && noAreaDestino.touched"></ngx-validation-message>
+      <ngx-validation-message label="claveAreaDestino" [showRequired]="claveAreaDestino?.errors?.required && claveAreaDestino.touched"></ngx-validation-message>
+      <ngx-validation-message label="descriptionAreaDestino" [showRequired]="descriptionAreaDestino?.errors?.required && descriptionAreaDestino.touched"></ngx-validation-message>
+      <ngx-validation-message label="nameAreaDestino" [showRequired]="nameAreaDestino?.errors?.required && nameAreaDestino.touched"></ngx-validation-message>
         
-            <ngx-deleg-subdeleg-shared [form]="formDelegation"></ngx-deleg-subdeleg-shared>
+            <ngx-deleg-subdeleg-shared [form]="form"></ngx-deleg-subdeleg-shared>
           
               <div class="row">
           
@@ -50,10 +54,11 @@
                     <div class="form-group">
                         <label class="label">¿Reporte Detallado?</label> &nbsp; 
                         
-                          <nb-select fullWidth selected="No">
+                          <nb-select fullWidth selected="No" formControlName="datailReport">
                             <nb-option value="No">No</nb-option>
                             <nb-option value="Si">Si</nb-option>
                         </nb-select>
+                        <ngx-validation-message label="year" [showRequired]="datailReport?.errors?.required && datailReport.touched"></ngx-validation-message>
                         
                     </div>
                 </div>
@@ -61,7 +66,7 @@
           
               <div class="form-group">
                 <div class="d-flex justify-content-center">
-                        <button type="submit" nbButton status="primary" [disabled]="!formDelegation.valid">Imprimir Reporte</button>
+                        <button type="submit" nbButton status="primary" [disabled]="!form.valid">Imprimir Reporte</button>
                 </div>
             </div>
 
