--- a/src/app/pages/executive-processes/re-docs-x-sera/re-docs-x-sera-list/re-docs-x-sera-list.component.html
+++ b/src/app/pages/executive-processes/re-docs-x-sera/re-docs-x-sera-list/re-docs-x-sera-list.component.html
@@ -1,4 +1,4 @@
-<nb-card class="cat-card"> 
+<nb-card class="cat-card">  
     <nb-card-header>
   
         <span class="title">
@@ -15,9 +15,9 @@
   
     <nb-card-body>
 
-        <form [formGroup]="formDelegation" (submit)="mostrarInfo()">
+        <form [formGroup]="form" (submit)="mostrarInfo()"> 
 
-            <ngx-deleg-subdeleg-shared [form]="formDelegation"></ngx-deleg-subdeleg-shared>
+            <ngx-deleg-subdeleg-shared [form]="form"></ngx-deleg-subdeleg-shared>
   
       <div class="row">
   
@@ -32,7 +32,7 @@
               </div>
               <ngx-validation-message label="fechaInicial" 
                          [showRequired]="fechaInicial?.errors?.required && fechaInicial.touched">
-                    </ngx-validation-message>
+              </ngx-validation-message>
           </div>
   
           <div class="col-md-2">
@@ -53,11 +53,15 @@
               
       </div>
 
-      <ngx-destination-area-shared></ngx-destination-area-shared>
+      <ngx-destination-area-shared [form]="form"></ngx-destination-area-shared>
+      <ngx-validation-message label="noAreaDestino" [showRequired]="noAreaDestino?.errors?.required && noAreaDestino.touched"></ngx-validation-message>
+      <ngx-validation-message label="claveAreaDestino" [showRequired]="claveAreaDestino?.errors?.required && claveAreaDestino.touched"></ngx-validation-message>
+      <ngx-validation-message label="descriptionAreaDestino" [showRequired]="descriptionAreaDestino?.errors?.required && descriptionAreaDestino.touched"></ngx-validation-message>
+      <ngx-validation-message label="nameAreaDestino" [showRequired]="nameAreaDestino?.errors?.required && nameAreaDestino.touched"></ngx-validation-message>
   
     <div class="form-group">
         <div class="d-flex justify-content-center">
-                <button type="submit" nbButton status="primary" [disabled]="!formDelegation.valid">Imprimir Reporte</button>
+                <button type="submit" nbButton status="primary" [disabled]="!form.valid">Imprimir Reporte</button>
         </div>
     </div>
         </form>
