--- a/src/app/pages/executive-processes/destruction-auth-management/destruction-auth-management-list/destruction-auth-management-list.component.html
+++ b/src/app/pages/executive-processes/destruction-auth-management/destruction-auth-management-list/destruction-auth-management-list.component.html
@@ -1,11 +1,9 @@
 <nb-card>
 
-  <nb-card-header>Pruebas</nb-card-header>
+  <nb-card-header>GESTIÓN DE AUTORIZACIÓN DE DESTRUCCIÓN</nb-card-header>
 
     <nb-card-body>
-
-      
-
+ 
       <div class="form-group row">
         <label class="label col-sm-1 col-form-label">No.</label>
         <div class="col-sm-3">
@@ -21,7 +19,7 @@
         <div class="col-sm-3">
           <input nbInput fullWidth placeholder="">
         </div>
-    </div>
+      </div>
 
     <div class="form-group row">
       <label class="label col-sm-1 col-form-label">Fecha de recepción</label>
@@ -38,6 +36,70 @@
       <div class="col-sm-3">
         <input nbInput fullWidth placeholder="">
       </div>
+  </div>
+
+  <div class="row"> 
+    <div class="col-lg-12">
+      <div class="form-group row">
+        <div class="col-sm-6">
+          <ng2-smart-table class="my-table" [settings]="tableActRecSettings" [source]="dataActRec"></ng2-smart-table>
+        </div> 
+        <div class="col-sm-6">
+          <ng2-smart-table class="my-table" [settings]="tableDictamSettings" [source]="dataDictam"></ng2-smart-table>
+        </div> 
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label class="label col-sm-1 col-form-label">Folio de escaneo</label>
+    <div class="col-sm-2">
+      <input nbInput fullWidth placeholder="">
+    </div>
+
+    <div class="col-sm-1">
+      <button type="submit" nbButton status="primary" >Botón 1</button>
+    </div>
+
+    <div class="col-sm-1">
+      <button type="submit" nbButton status="primary" >Botón 2</button>
+    </div>
+
+    <div class="col-sm-1">
+      <button type="submit" nbButton status="primary" >Botón 3</button>
+    </div>
+
+    <label class="label col-sm-1 col-form-label">Observaciones</label>
+    <div class="col-sm-5">
+      <textarea nbInput fullWidth placeholder=""></textarea>
+    </div>
+  </div>
+
+  <ng2-smart-table class="my-table" [settings]="tableNoBienSettings" [source]="dataNoBien" (deleteConfirm)="onDeleteConfirm($event)"></ng2-smart-table>
+
+  <div class="row"> 
+    <div class="col-lg-12">
+      <div class="form-group row">
+        <div class="col-sm-6">
+          <nb-radio-group status="success" [(value)]="radioGroupValue">
+            <nb-radio 
+              [value]="'Disponible'">
+              Disponible
+            </nb-radio>
+            <nb-radio
+              [value]="'No Disponible'">
+              No Disponible
+            </nb-radio>
+            </nb-radio-group>
+        </div>
+        <div class="col-sm-3">
+          <button type="submit" nbButton status="primary" >Insertar vía archivo Plano</button>
+        </div> 
+        <div class="col-sm-3">
+          <button type="submit" nbButton status="primary" >Insertar vía rastreador</button>
+        </div> 
+      </div>
+    </div>
   </div>
 
     </nb-card-body>
