--- a/src/app/pages/executive-processes/destruction-authorization/destruction-authorization-list/destruction-authorization-list.component.html
+++ b/src/app/pages/executive-processes/destruction-authorization/destruction-authorization-list/destruction-authorization-list.component.html
@@ -52,7 +52,7 @@
     </div>
  
    
-        <ng2-smart-table class="my-table" [settings]="settings" [source]="data" (deleteConfirm)="onDeleteConfirm($event)"></ng2-smart-table>
+        <ng2-smart-table class="my-table" [settings]="settings" [source]="data"></ng2-smart-table>
      
         <div class="row">
 
