estilos de ng select y componentes compartidos

--- a/src/app/@components/deleg-subdeleg-shared/deleg-subdeleg-shared.component.html
+++ b/src/app/@components/deleg-subdeleg-shared/deleg-subdeleg-shared.component.html
@@ -1,28 +1,18 @@
-<ng-container [formGroup]="form"> 
+<ng-container > 
 
     <div class="row" >
         <div class="col-md-4">
             <div class="form-group"> 
                     <label class="label">Delegación</label>
-                    <ng-select  nbinput=""  
-                                class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition"  
-                                [items]="delegations$ | async" 
-                                bindValue="id"
-                                [loading]="delegationsLoading"
-                                [typeahead]="delegationInput$"
-                                typeToSearchText="Escriba 3 o mas caracteres"
-                                placeholder="" 
-                                [formControlName]="nomDeleg"
-                                notFoundText="No se encontraron elementos">
-                                <ng-template ng-label-tmp let-item="item">
-                                    {{item.id}} - {{item.name}}
-                                </ng-template>
-                                <ng-template ng-option-tmp let-item="item" let-index="index" let-search="searchTerm">
-                                    <div>{{item.id}} - {{item.name}} </div>
-                                    
-                                </ng-template> 
-
-                    </ng-select>
+                    <ngx-select  (fetchItems)="getDelegations($event)" 
+                    [data]="delegations" 
+                    [form]="form" 
+                    value="id" 
+                    label="description"
+                    [control]="delegationField" 
+                    (change)="onDelegationsChange($event)">
+                                
+                    </ngx-select>      
             </div>
         </div>
     </div>
@@ -30,29 +20,21 @@
     <div class="row" >
         <div class="col-md-4">
             <div class="form-group"> 
-                    <label class="label">SubDelegación</label>
-                    <ng-select  nbinput=""  
-                                class="ng-dropdown-panel-items scroll-host input-full-width size-medium status-basic shape-rectangle nb-transition" 
-                                [items]="subDelegations$ | async" 
-                                bindValue="id"
-                                [loading]="subDelegationsLoading"
-                                [typeahead]="subDelegationInput$"
-                                typeToSearchText="Escriba 3 o mas caracteres"
-                                placeholder="" 
-                                [formControlName]="nomSubDel"
-                                notFoundText="No se encontraron elementos">
-                                <ng-template ng-label-tmp let-item="item">
-                                    {{item.id}} - {{item.name}}
-                                </ng-template>
-                                <ng-template ng-option-tmp let-item="item" let-index="index" let-search="searchTerm">
-                                    <div>{{item.id}} - {{item.name}} </div>
-                                    
-                                </ng-template> 
-
-                    </ng-select>
+                    <label class="label">Delegación</label>
+                    <ngx-select  (fetchItems)="getSubDelegations($event)" 
+                    [data]="subdelegations" 
+                    [form]="form" 
+                    value="id" 
+                    label="description"
+                    [control]="subdelegationField" 
+                    (change)="onSubDelegationsChange($event)">
+                                
+                    </ngx-select>      
             </div>
         </div>
     </div>
+
+    
     
 </ng-container>
 
