--- a/src/app/@theme/styles/_overrides.scss
+++ b/src/app/@theme/styles/_overrides.scss
@@ -16,7 +16,7 @@
   color: #222b45;
   font-size: 0.9375rem;
   font-weight: 400;
-  height: 40px;
+  height: 40px !important;
 }
 
 .ng-select.custom.ng-invalid.ng-touched .ng-select-container {
